profilelist1exp/unpackaged/objects/Topic_Experts__c.object
<CustomObject>
    <description>BOLT &amp; GSL project for managing Presenter/Architect profiles</description>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DSC</fullName>
                </value>
                <value>
                    <fullName>EBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exec_Presenter_s_Admin__c</fullName>
        <label>Exec Presenter&apos;s Admin</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Presenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Presenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expert_Location__c</fullName>
        <label>Expert Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Resource_Company__c</fullName>
        <label>Company</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Resource_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BVS</fullName>
                </value>
                <value>
                    <fullName>CSMB</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LE/PUB</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Ops</fullName>
                </value>
                <value>
                    <fullName>PG</fullName>
                </value>
                <value>
                    <fullName>PG Marketing</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Presenter_Architect_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presenters_Architects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event_Location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sites</value>
            </filterItems>
            <filterItems>
                <field>Event_Location__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Topic Experts</relationshipLabel>
        <relationshipName>Presenters_Architects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specializing_In__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To assign Presenter to a subject</description>
        <label>Specializing In</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agenda_Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Topic</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agenda_Content__c</referenceTo>
        <relationshipLabel>Topic Experts</relationshipLabel>
        <relationshipName>Topic_Experts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Expert_Name__c</fullName>
        <label>Topic Expert Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Experts_Bio__c</fullName>
        <label>Topic Expert&apos;s Bio</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presenter</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>External Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Topic Experts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Topic_Expert_Name__c</columns>
        <columns>Title__c</columns>
        <columns>External_Resource_Email__c</columns>
        <columns>Specializing_In__c</columns>
        <columns>Expertise__c</columns>
        <columns>Site__c</columns>
        <columns>Expert_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DSC_Topic_Experts</fullName>
        <columns>NAME</columns>
        <columns>Topic_Expert_Name__c</columns>
        <columns>Title__c</columns>
        <columns>External_Resource_Email__c</columns>
        <columns>Specializing_In__c</columns>
        <columns>Expertise__c</columns>
        <columns>Site__c</columns>
        <columns>Expert_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Type__c</field>
            <operation>equals</operation>
            <value>DSC</value>
        </filters>
        <label>DSC Topic Experts</label>
        <language>en_US</language>
        <sharedTo>
            <group>DellSolutionCentersStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBC_Topic_Expert</fullName>
        <columns>NAME</columns>
        <columns>Topic_Expert_Name__c</columns>
        <columns>Title__c</columns>
        <columns>External_Resource_Email__c</columns>
        <columns>Specializing_In__c</columns>
        <columns>Expertise__c</columns>
        <columns>Site__c</columns>
        <columns>Expert_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Type__c</field>
            <operation>equals</operation>
            <value>EBC</value>
        </filters>
        <label>EBC Topic Expert</label>
        <language>en_US</language>
        <sharedTo>
            <group>ExecutiveBriefingCenterStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>External_Topic_Experts</fullName>
        <columns>NAME</columns>
        <columns>Topic_Expert_Name__c</columns>
        <columns>Title__c</columns>
        <columns>External_Resource_Email__c</columns>
        <columns>Specializing_In__c</columns>
        <columns>Expertise__c</columns>
        <columns>Site__c</columns>
        <columns>Expert_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Topic_Experts__c.External_Topic_Expert</value>
        </filters>
        <label>External Topic Experts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Internal_Topic_Experts</fullName>
        <columns>NAME</columns>
        <columns>Topic_Expert_Name__c</columns>
        <columns>Title__c</columns>
        <columns>External_Resource_Email__c</columns>
        <columns>Specializing_In__c</columns>
        <columns>Expertise__c</columns>
        <columns>Site__c</columns>
        <columns>Expert_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Topic_Experts__c.Internal_Topic_Expert</value>
        </filters>
        <label>Internal Topic Experts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TE-{0000000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topic Experts</pluralLabel>
    <recordTypes>
        <fullName>External_Topic_Expert</fullName>
        <active>true</active>
        <description>Topic Experts from outside Dell</description>
        <label>External Topic Expert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Topic_Expert</fullName>
        <active>true</active>
        <description>Topic Experts within Dell</description>
        <label>Internal Topic Expert</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>